==============
Change History
==============

Unreleased
==========

2015/06/02 0.6.3
================

 - call isUp with host localhost on setUp method of basesql layer

2015/03/13 0.6.2
================

 - fix: on SIGINT try to stop nginx silently

 - use only ascii characters in mongodb_* documents

2015/03/12 0.6.1
================

 - added SIGINT handling to nginx layer (KeyboardInterrupt)

2013/09/06 0.6.0
================

 - ServerLayer: is now compatible with python 3.3

2013/07/01 0.5.3
================

 - ServerLayer: reopen logfile in start instead of setUp

2013/07/01 0.5.2
================

 - ServerLayer: generate logfiles with correct file extension

2013/07/01 0.5.1
================

 - It's possible to specify logging of the ServerLayer

 - included memcached in buildout

 - use openresty instead of nginx

 - nailed versions of dependencies

2013/06/19 0.5.0
================

 - Add MongoLayer

2013/04/03 0.4.3
================

 - SMTPServerLayer's is now None before calling setUp()

 - add additional tests for SMTPServerLayer

2013/04/03 0.4.2
================

 - add missing __name__ to SMTPServerLayer

2013/04/03 0.4.1
================

 - add missing __bases__ to SMTPServerLayer

2013/04/03 0.4.0
================

 - added SMTPServerLayer

 - updated bootstrap.py and nginx/psql download location

2012/11/23 0.3.5
================

 - ServerLayer: add args for subprocess open

2012/11/12 0.3.4
================

 - set to zip_safe = False

2012/11/12 0.3.3
================

 - release without changes due to wrong distribution of previous version

2011/12/06 0.3.2
================

 - fixed #1 an endless loop in server layer

2011/11/29 0.3.1
================

 - added missing README to distro

2011/11/29 0.3.0
================

 - allow to set a snapshot directory in workdirectory-layer - this
   allows for generating non-temporary snapshots.

 - moved wait implementation for server start in server-layer into