@@ -50,11 +50,6 @@ command = ${memcached:location}/bin/memcached -U 0 -vv -p ${ports:memcached}
 content = #!/bin/sh
  ${:command} $@
 
-
-# separate test suite and test runner for mongodb
-# setup: bin/buildout install mongodb mongodb-test
-# run:   bin/test-mongodb
-
 [mongodb]
 recipe = rod.recipe.mongodb
 darwin-32bit-url = http://downloads.mongodb.org/osx/mongodb-osx-i386-2.4.4.tgz
@@ -62,7 +57,11 @@ darwin-64bit-url = http://downloads.mongodb.org/osx/mongodb-osx-x86_64-2.4.4.tgz
 linux2-32bit-url = http://downloads.mongodb.org/linux/mongodb-linux-i686-2.4.4.tgz
 linux2-64bit-url = http://downloads.mongodb.org/linux/mongodb-linux-x86_64-2.4.4.tgz
 
+
 [mongodb-test]
+# Separate test suite and test runner for MongoDB
+# setup: bin/buildout install mongodb mongodb-test
+# run:   bin/test-mongodb
 recipe = zc.recipe.testrunner
 script = test-mongodb
 eggs = lovely.testlayers [mongodb]
