@@ -4,6 +4,8 @@ Change History
 
 Unreleased
 ==========
+- Refactor generic functionality from MongoLayer into WorkspaceLayer
+
 
 2015/06/02 0.6.3
 ================
